# mcbe_management

./: .gitignore  LICENSE  MANIFEST.in  README.md  requirements.txt  server_uninstall.sh  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: CODEOWNERS
mcbe/: __main__.py
mcbe_management/: __main__.py  backup.py  exceptions.py  get_update.py  install.py  lib  lib.py  log.py  logger.py  server_power.py  update.py
mcbe_management/templete/: config.json  demon.py  mcbe.service  mcbe_management.json  script.json  stop.py
mcbe_manegement/: __main__.py  exceptions.py  server_power.py
