[metadata]
name = mcbe_management
version = 0.3.0
license = MIT
author = walkmana25
author_email = 50088655+Walkmana-25@users.noreply.github.com
url = https://github.com/Walkmana-25/mcbe_management
description = Simple management software for minecraft bedrock server
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires = fire 
  selenium 
  chromedriver_binary-auto 
  requests
packages = find:

[options.entry_points]

console_scripts = mcbe=mcbe_management.__main__:main

